# odrl-multi-agent-llm

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  liksDSSC.docx
backend/: .env.example  .env.production  .gitignore  Archit.md  Dockerfile  Dockerfile.prod  LLMs.md  README-DEPLOYMENT.md  README.md  User Setup Guide.md  main.py  pyproject.toml  requirements.txt  test.py  test_custom_model_fix.py  test_full_pipeline.py  test_gemini.py  test_parser.py  test_quick.py  test_reasoner.py  test_shacl.py  test_validator.py
backend/agents/: odrl_action_dict.json  odrl_dictionary_all.json  odrl_leftOperand_dict.json  odrl_operator_dict.json
backend/agents/generator/: generator.py
backend/agents/reasoner/: reasoner.py
backend/agents/text_parser/: parser.py
backend/agents/validator/: __init__.py  odrl_shapes.ttl  shacl_validator.py  validator.py
backend/api/: main.py  main_minimal.py  storage_api.py
backend/config/: .gitignore  __init__.py  custom_models.example.json  settings.py
backend/data/approved_policies/: approved_policies_dataset.json
backend/data/rejected_policies/: rejected_policies_dataset.json
backend/results/generator/: ppppp_20251117_130337.json
backend/results/reasoner/: PP_20251115_215144.json  drk_ambiguous_condition_policy_20251116_162906.json  drk_temporal_music_contradiction_20251116_163715.json  (+2 more)
backend/tests/: Testsreadme.md  test_file_parser.py
backend/utils/: file_parser.py  llm_factory.py  logger_utils.py  rdf_converter.py  request_utils.py
docs/: .gitignore  API.md  (+8 more)
(+78 files in other folders)
